2004-08-22 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: peepholes 248.i-m for xdata bitfields

2004-08-21 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/mcs51/ralloc.c (packRegsForOneuse): fixed bug #1012650 and some
	related problems

2004-08-21 Bernhard Held <bernhard AT bernhardheld.de>

	* sim/ucsim/cmd.src/Makefile.in: run lex only if $(PRJDIR)/devel exists

2004-08-18 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/z80/ralloc.c (packRegsForAssign): ported some bug fixes from the
	mcs51 port

2004-08-16 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/gen.c: Restored fn genRet as previous fix was incorrect.

2004-08-14 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/gen.c (genJumpTab): jumptables for more than 16 switch
	cases use more compact code.

2004-08-13 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/gen.c: Fixed problem with fn returning a variable bigger than a char.

2004-08-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCClrange.c (findPrevUse): fixed bug #1007371

2004-08-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCsymt.h,
	* src/SDCCsymt.c (changePointer, checkDecl, addSymChain): changed
	parameter of changePointer() from symbol* to sym_link*
	* src/SDCCast.c (decorateType): call changePointer() for CAST op
	* src/SDCCsymt.c (compareType): void* type is castable to other
	pointers, but not necesarily an exact match.
	* src/SDCCicode.c (geniCodeCast): allow void* casting here since it
	is no longer blindly treated as an exact match.
	* src/SDCCval.c (valCastLiteral): treat missing type as cast to void

2004-08-12 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/glue.c: Added struct initialisation fn printIvalStruct.

2004-08-11 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic/gen.c,
	* src/pic/pcode.c,
	* src/pic/ralloc.h,
	* src/pic/ralloc.c: Printing rIdx on internal verbose debug.
